--- a/samples/todo-mvc/index.html
+++ b/samples/todo-mvc/index.html
@@ -66,7 +66,7 @@
         <script src="js/todo/controllers.js"></script>
 
 
-        <script src="js/config.js">
+        <script src="js/config.js"></script>
 
         <script>
         	$(function() {
